--- a/app/src/main/res/layout/newbook.xml
+++ b/app/src/main/res/layout/newbook.xml
@@ -14,10 +14,11 @@
         android:layout_width="match_parent"
 
 
+
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="30dp"
+            android:layout_width="25dp"
             android:src="@drawable/arrow_left"
             android:id="@+id/Book_returnToMenuArrow"
             android:layout_alignBaseline="@+id/Book_favoriteBookAdd"
@@ -25,7 +26,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="3dp"
-            android:layout_height="30dp"
+            android:layout_height="25dp"
             android:contentDescription="@string/Book_returnToMenu" />
 
         <ImageView
@@ -45,7 +46,8 @@
         android:id="@+id/Book_scroll"
         android:fillViewport="true"
 
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="35dp"
+
         android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -61,17 +63,15 @@
 
                 android:id="@+id/hg"
 
-               android:layout_margin="20dp"
-                app:shadowOffsetX="0"
-                app:shadowOffsetY="3"
-                app:shadowAlpha="0.4"
+               android:layout_margin="15dp"
+
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:paddingBottom="30dp"
+                    android:paddingBottom="20dp"
                     android:layout_margin="5dp"
 
 
@@ -212,7 +212,7 @@
                     <TextView
                         android:id="@+id/ProfileWriters_ifTopBook"
                         android:layout_width="wrap_content"
-
+                        android:layout_marginBottom="5dp"
                         android:layout_height="wrap_content"
                         android:layout_alignBottom="@+id/Book_photoBook"
                         android:layout_toEndOf="@+id/Book_photoBook"
@@ -220,6 +220,7 @@
                         android:background="@drawable/yellowtheme"
                         android:fontFamily="@font/mu"
                         android:paddingLeft="20dp"
+                        android:textSize="12dp"
                         android:paddingRight="20dp"
                         android:text="Klasyka"
                         android:textColor="#000" />
@@ -231,12 +232,15 @@
                         android:layout_alignBottom="@+id/Book_photoBook"
                         android:layout_marginLeft="5dp"
 
+
                         android:layout_toEndOf="@+id/ProfileWriters_ifTopBook"
                         android:background="@drawable/yellowtheme"
                         android:fontFamily="@font/mu"
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
                         android:text="Klasyka"
+                        android:textSize="12sp"
+                        android:layout_marginBottom="5dp"
                         android:textColor="#000" />
 
                     <TextView
@@ -244,7 +248,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/ProfileWriters_ifTopWriters"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:layout_toEndOf="@+id/Book_photoBook"
 
                         android:background="@drawable/yellowtheme"
@@ -253,6 +257,7 @@
                         android:layout_marginBottom="30dp"
                         android:paddingRight="20dp"
                         android:text="Klasyka"
+                        android:textSize="12sp"
                         android:textColor="#000" />
                 </RelativeLayout>
             </LinearLayout>
@@ -262,7 +267,7 @@
                 android:layout_width="wrap_content"
                 android:text="@string/Book_bookDescriptionText"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/monte"
                 android:layout_marginRight="20dp"
                 android:id="@+id/Book_description"
@@ -277,7 +282,7 @@
                 android:padding="15dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-                android:textSize="15sp"
+                android:textSize="14sp"
 
 
                 android:textColor="#000"
@@ -311,8 +316,8 @@
                 android:layout_below="@+id/Book_descriptisadon"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
-                android:paddingTop="60dp"
-                android:paddingBottom="60dp"
+                android:paddingTop="50dp"
+                android:paddingBottom="50dp"
                 android:id="@+id/cc"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -364,7 +369,7 @@
                     android:paddingBottom="10dp"
                     android:textStyle="bold"
 
-
+                    android:textSize="12dp"
 
                     android:textColor="#000"
 
@@ -414,13 +419,35 @@ android:id="@+id/ff"
 
                 android:layout_height="wrap_content"></EditText>
 
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_alignBottom="@+id/ff"
+                android:text="Usuń"
+                android:fontFamily="@font/monte"
+                android:layout_margin="10dp"
+
+                android:textColor="#000"
+                android:id="@+id/gg"
+
+
+                android:textSize="12dp"
+
+                android:layout_toStartOf="@+id/insertBookMarkView"
+
+
+
+                android:layout_height="wrap_content"></TextView>
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_alignBottom="@+id/ff"
                 android:text="Opublikuj"
                 android:fontFamily="@font/monte"
+
                 android:layout_margin="10dp"
-                android:textSize="15sp"
+                android:textSize="12sp"
                 android:textColor="#000"
                 android:id="@+id/insertBookMarkView"
 
